# p2pfilesend

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
zome/: Cargo.toml
zome/p2pfilesend.dna.workdir/: dna.json
zome/tests/: package-lock.json  package.json  tsconfig.json
zome/tests/src/: index.ts
zome/zomes/p2pfilesend/: Cargo.toml
zome/zomes/p2pfilesend/src/: lib.rs
zome/zomes/p2pfilesend/src/entries/: file.rs
zome/zomes/p2pfilesend/src/entries/file/: handlers.rs
